<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingEnd="16sp"
    android:paddingStart="16dp"
    android:paddingTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewUserNameFragmentUserInfo"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/textNameUser"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/editTextUserNameFragmentUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textHintUserName"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewUserSurnameFragmentUserInfo"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/textSurname"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/editTextUserSurnameFragmentUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textHintSurname"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/textViewUserBDayFragmentUserInfo"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/textBirthday"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textViewSetUserBDayFragmentUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textInputDate"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>
